--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
         matrix:
-            os: [ubuntu-latest] # [ubuntu-latest, windows-latest, macos-latest]
+            os: [windows-latest] # [ubuntu-latest, windows-latest, macos-latest]
     
     steps:
       - uses: actions/checkout@v1
