--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt, clippy
-      - name: Clippy
-        run: cargo clippy
-      - name: Build
-        run: cargo build --verbose
-      - name: Tests
-        run: cargo test --verbose
+      - name: Setup steamcmd
+        uses: CyberAndrii/setup-steamcmd@v1
+      - name: Update app
+        run: steamcmd +login anonymous +app_update 1892930 validate +quit
+      - name: List
+        run: ls
