--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,5 @@ jobs:
         run: ls C:/hostedtoolcache/windows/steamcmd/latest/i386/steamapps/
       - name: List 4
         run: ls C:/hostedtoolcache/windows/steamcmd/latest/i386/steamapps/common/
+      - name: List 5
+        run: ls C:/hostedtoolcache/windows/steamcmd/latest/i386/steamapps/common/Dedicated Server/
